grupo05/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    Columna
    Corchete_Derecho
    Corchete_Izquierdo
    IS
    NULL
    string

Grammar

Rule 0     S' -> S
Rule 1     S -> _SELECT _FROM _WHERE GROUP_BY ORDER_BY
Rule 2     _SELECT -> SELECT COLUMNAS
Rule 3     _SELECT -> SELECT DISTINCT COLUMNAS
Rule 4     _SELECT -> SELECT Fun_Res AS Comilla Cadena Comilla
Rule 5     COLUMNAS -> COLUMNA
Rule 6     COLUMNAS -> COLUMNA Coma COLUMNAS
Rule 7     COLUMNA -> Cadena Punto Cadena
Rule 8     COLUMNA -> Cadena Punto Cadena AS Comilla Cadena Comilla
Rule 9     _FROM -> FROM TABLAS
Rule 10    _FROM -> FROM TABLAS INNER_JOIN
Rule 11    _FROM -> FROM TABLAS LEFT_JOIN
Rule 12    TABLAS -> Cadena AS Cadena
Rule 13    TABLAS -> Cadena
Rule 14    TABLAS -> TABLAS Cadena AS Cadena
Rule 15    TABLAS -> TABLAS Cadena
Rule 16    _WHERE -> WHERE CONDICION
Rule 17    _WHERE -> WHERE CONDICION _IN
Rule 18    _WHERE -> WHERE CONDICION NOT_IN
Rule 19    _WHERE -> <empty>
Rule 20    _IN -> IN Parentesis_Izquierdo S Parentesis_Derecho
Rule 21    NOT_IN -> NOT IN Parentesis_Izquierdo S Parentesis_Derecho
Rule 22    Fun_Res -> MAX Parentesis_Izquierdo COLUMNA Parentesis_Derecho
Rule 23    Fun_Res -> MIN Parentesis_Izquierdo COLUMNA Parentesis_Derecho
Rule 24    Fun_Res -> COUNT Parentesis_Izquierdo COLUMNA Parentesis_Derecho
Rule 25    Fun_Res -> COUNT Parentesis_Izquierdo DISTINCT COLUMNA Parentesis_Derecho
Rule 26    SIGNO -> Igual
Rule 27    SIGNO -> Desigual
Rule 28    SIGNO -> Mayor
Rule 29    SIGNO -> Menor
Rule 30    SIGNO -> Mayor_Igual
Rule 31    SIGNO -> Menor_Igual
Rule 32    GROUP_BY -> GROUP BY COLUMNAS
Rule 33    GROUP_BY -> GROUP BY COLUMNAS _HAVING
Rule 34    GROUP_BY -> <empty>
Rule 35    _HAVING -> HAVING CONDICION
Rule 36    _HAVING -> <empty>
Rule 37    ORDER_BY -> ORDER BY Cadena DESC
Rule 38    ORDER_BY -> ORDER BY Cadena ASC
Rule 39    ORDER_BY -> ORDER BY Cadena
Rule 40    ORDER_BY -> <empty>
Rule 41    CONDICION -> COLUMNA SIGNO ALGO
Rule 42    CONDICION -> COLUMNA SIGNO COLUMNA
Rule 43    CONDICION -> COLUMNA SIGNO ALGO AND CONDICION
Rule 44    CONDICION -> COLUMNA SIGNO COLUMNA AND CONDICION
Rule 45    CONDICION -> COLUMNA SIGNO ALGO OR CONDICION
Rule 46    CONDICION -> COLUMNA SIGNO COLUMNA OR CONDICION
Rule 47    ALGO -> numero
Rule 48    ALGO -> Comilla Cadena Comilla
Rule 49    INNER_JOIN -> INNER JOIN TABLAS ON CONDICION
Rule 50    INNER_JOIN -> INNER JOIN TABLAS ON CONDICION INNER JOIN
Rule 51    INNER_JOIN -> INNER JOIN TABLAS ON CONDICION WHERE
Rule 52    LEFT_JOIN -> LEFT JOIN TABLAS ON CONDICION
Rule 53    LEFT_JOIN -> LEFT JOIN TABLAS ON CONDICION LEFT JOIN
Rule 54    LEFT_JOIN -> LEFT JOIN TABLAS ON CONDICION WHERE

Terminals, with rules where they appear

AND                  : 43 44
AS                   : 4 8 12 14
ASC                  : 38
BY                   : 32 33 37 38 39
COUNT                : 24 25
Cadena               : 4 7 7 8 8 8 12 12 13 14 14 15 37 38 39 48
Columna              : 
Coma                 : 6
Comilla              : 4 4 8 8 48 48
Corchete_Derecho     : 
Corchete_Izquierdo   : 
DESC                 : 37
DISTINCT             : 3 25
Desigual             : 27
FROM                 : 9 10 11
GROUP                : 32 33
HAVING               : 35
IN                   : 20 21
INNER                : 49 50 50 51
IS                   : 
Igual                : 26
JOIN                 : 49 50 50 51 52 53 53 54
LEFT                 : 52 53 53 54
MAX                  : 22
MIN                  : 23
Mayor                : 28
Mayor_Igual          : 30
Menor                : 29
Menor_Igual          : 31
NOT                  : 21
NULL                 : 
ON                   : 49 50 51 52 53 54
OR                   : 45 46
ORDER                : 37 38 39
Parentesis_Derecho   : 20 21 22 23 24 25
Parentesis_Izquierdo : 20 21 22 23 24 25
Punto                : 7 8
SELECT               : 2 3 4
WHERE                : 16 17 18 51 54
error                : 
numero               : 47
string               : 

Nonterminals, with rules where they appear

ALGO                 : 41 43 45
COLUMNA              : 5 6 22 23 24 25 41 42 42 43 44 44 45 46 46
COLUMNAS             : 2 3 6 32 33
CONDICION            : 16 17 18 35 43 44 45 46 49 50 51 52 53 54
Fun_Res              : 4
GROUP_BY             : 1
INNER_JOIN           : 10
LEFT_JOIN            : 11
NOT_IN               : 18
ORDER_BY             : 1
S                    : 20 21 0
SIGNO                : 41 42 43 44 45 46
TABLAS               : 9 10 11 14 15 49 50 51 52 53 54
_FROM                : 1
_HAVING              : 33
_IN                  : 17
_SELECT              : 1
_WHERE               : 1

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . _SELECT _FROM _WHERE GROUP_BY ORDER_BY
    (2) _SELECT -> . SELECT COLUMNAS
    (3) _SELECT -> . SELECT DISTINCT COLUMNAS
    (4) _SELECT -> . SELECT Fun_Res AS Comilla Cadena Comilla

    SELECT          shift and go to state 3

    S                              shift and go to state 1
    _SELECT                        shift and go to state 2

state 1

    (0) S' -> S .



state 2

    (1) S -> _SELECT . _FROM _WHERE GROUP_BY ORDER_BY
    (9) _FROM -> . FROM TABLAS
    (10) _FROM -> . FROM TABLAS INNER_JOIN
    (11) _FROM -> . FROM TABLAS LEFT_JOIN

    FROM            shift and go to state 5

    _FROM                          shift and go to state 4

state 3

    (2) _SELECT -> SELECT . COLUMNAS
    (3) _SELECT -> SELECT . DISTINCT COLUMNAS
    (4) _SELECT -> SELECT . Fun_Res AS Comilla Cadena Comilla
    (5) COLUMNAS -> . COLUMNA
    (6) COLUMNAS -> . COLUMNA Coma COLUMNAS
    (22) Fun_Res -> . MAX Parentesis_Izquierdo COLUMNA Parentesis_Derecho
    (23) Fun_Res -> . MIN Parentesis_Izquierdo COLUMNA Parentesis_Derecho
    (24) Fun_Res -> . COUNT Parentesis_Izquierdo COLUMNA Parentesis_Derecho
    (25) Fun_Res -> . COUNT Parentesis_Izquierdo DISTINCT COLUMNA Parentesis_Derecho
    (7) COLUMNA -> . Cadena Punto Cadena
    (8) COLUMNA -> . Cadena Punto Cadena AS Comilla Cadena Comilla

    DISTINCT        shift and go to state 7
    MAX             shift and go to state 11
    MIN             shift and go to state 12
    COUNT           shift and go to state 13
    Cadena          shift and go to state 9

    COLUMNAS                       shift and go to state 6
    Fun_Res                        shift and go to state 8
    COLUMNA                        shift and go to state 10

state 4

    (1) S -> _SELECT _FROM . _WHERE GROUP_BY ORDER_BY
    (16) _WHERE -> . WHERE CONDICION
    (17) _WHERE -> . WHERE CONDICION _IN
    (18) _WHERE -> . WHERE CONDICION NOT_IN
    (19) _WHERE -> .

    WHERE           shift and go to state 15
    GROUP           reduce using rule 19 (_WHERE -> .)
    ORDER           reduce using rule 19 (_WHERE -> .)
    $end            reduce using rule 19 (_WHERE -> .)
    Parentesis_Derecho reduce using rule 19 (_WHERE -> .)

    _WHERE                         shift and go to state 14

state 5

    (9) _FROM -> FROM . TABLAS
    (10) _FROM -> FROM . TABLAS INNER_JOIN
    (11) _FROM -> FROM . TABLAS LEFT_JOIN
    (12) TABLAS -> . Cadena AS Cadena
    (13) TABLAS -> . Cadena
    (14) TABLAS -> . TABLAS Cadena AS Cadena
    (15) TABLAS -> . TABLAS Cadena

    Cadena          shift and go to state 17

    TABLAS                         shift and go to state 16

state 6

    (2) _SELECT -> SELECT COLUMNAS .

    FROM            reduce using rule 2 (_SELECT -> SELECT COLUMNAS .)


state 7

    (3) _SELECT -> SELECT DISTINCT . COLUMNAS
    (5) COLUMNAS -> . COLUMNA
    (6) COLUMNAS -> . COLUMNA Coma COLUMNAS
    (7) COLUMNA -> . Cadena Punto Cadena
    (8) COLUMNA -> . Cadena Punto Cadena AS Comilla Cadena Comilla

    Cadena          shift and go to state 9

    COLUMNAS                       shift and go to state 18
    COLUMNA                        shift and go to state 10

state 8

    (4) _SELECT -> SELECT Fun_Res . AS Comilla Cadena Comilla

    AS              shift and go to state 19


state 9

    (7) COLUMNA -> Cadena . Punto Cadena
    (8) COLUMNA -> Cadena . Punto Cadena AS Comilla Cadena Comilla

    Punto           shift and go to state 20


state 10

    (5) COLUMNAS -> COLUMNA .
    (6) COLUMNAS -> COLUMNA . Coma COLUMNAS

    FROM            reduce using rule 5 (COLUMNAS -> COLUMNA .)
    HAVING          reduce using rule 5 (COLUMNAS -> COLUMNA .)
    ORDER           reduce using rule 5 (COLUMNAS -> COLUMNA .)
    $end            reduce using rule 5 (COLUMNAS -> COLUMNA .)
    Parentesis_Derecho reduce using rule 5 (COLUMNAS -> COLUMNA .)
    Coma            shift and go to state 21


state 11

    (22) Fun_Res -> MAX . Parentesis_Izquierdo COLUMNA Parentesis_Derecho

    Parentesis_Izquierdo shift and go to state 22


state 12

    (23) Fun_Res -> MIN . Parentesis_Izquierdo COLUMNA Parentesis_Derecho

    Parentesis_Izquierdo shift and go to state 23


state 13

    (24) Fun_Res -> COUNT . Parentesis_Izquierdo COLUMNA Parentesis_Derecho
    (25) Fun_Res -> COUNT . Parentesis_Izquierdo DISTINCT COLUMNA Parentesis_Derecho

    Parentesis_Izquierdo shift and go to state 24


state 14

    (1) S -> _SELECT _FROM _WHERE . GROUP_BY ORDER_BY
    (32) GROUP_BY -> . GROUP BY COLUMNAS
    (33) GROUP_BY -> . GROUP BY COLUMNAS _HAVING
    (34) GROUP_BY -> .

    GROUP           shift and go to state 26
    ORDER           reduce using rule 34 (GROUP_BY -> .)
    $end            reduce using rule 34 (GROUP_BY -> .)
    Parentesis_Derecho reduce using rule 34 (GROUP_BY -> .)

    GROUP_BY                       shift and go to state 25

state 15

    (16) _WHERE -> WHERE . CONDICION
    (17) _WHERE -> WHERE . CONDICION _IN
    (18) _WHERE -> WHERE . CONDICION NOT_IN
    (41) CONDICION -> . COLUMNA SIGNO ALGO
    (42) CONDICION -> . COLUMNA SIGNO COLUMNA
    (43) CONDICION -> . COLUMNA SIGNO ALGO AND CONDICION
    (44) CONDICION -> . COLUMNA SIGNO COLUMNA AND CONDICION
    (45) CONDICION -> . COLUMNA SIGNO ALGO OR CONDICION
    (46) CONDICION -> . COLUMNA SIGNO COLUMNA OR CONDICION
    (7) COLUMNA -> . Cadena Punto Cadena
    (8) COLUMNA -> . Cadena Punto Cadena AS Comilla Cadena Comilla

    Cadena          shift and go to state 9

    CONDICION                      shift and go to state 27
    COLUMNA                        shift and go to state 28

state 16

    (9) _FROM -> FROM TABLAS .
    (10) _FROM -> FROM TABLAS . INNER_JOIN
    (11) _FROM -> FROM TABLAS . LEFT_JOIN
    (14) TABLAS -> TABLAS . Cadena AS Cadena
    (15) TABLAS -> TABLAS . Cadena
    (49) INNER_JOIN -> . INNER JOIN TABLAS ON CONDICION
    (50) INNER_JOIN -> . INNER JOIN TABLAS ON CONDICION INNER JOIN
    (51) INNER_JOIN -> . INNER JOIN TABLAS ON CONDICION WHERE
    (52) LEFT_JOIN -> . LEFT JOIN TABLAS ON CONDICION
    (53) LEFT_JOIN -> . LEFT JOIN TABLAS ON CONDICION LEFT JOIN
    (54) LEFT_JOIN -> . LEFT JOIN TABLAS ON CONDICION WHERE

    WHERE           reduce using rule 9 (_FROM -> FROM TABLAS .)
    GROUP           reduce using rule 9 (_FROM -> FROM TABLAS .)
    ORDER           reduce using rule 9 (_FROM -> FROM TABLAS .)
    $end            reduce using rule 9 (_FROM -> FROM TABLAS .)
    Parentesis_Derecho reduce using rule 9 (_FROM -> FROM TABLAS .)
    Cadena          shift and go to state 31
    INNER           shift and go to state 32
    LEFT            shift and go to state 33

    INNER_JOIN                     shift and go to state 29
    LEFT_JOIN                      shift and go to state 30

state 17

    (12) TABLAS -> Cadena . AS Cadena
    (13) TABLAS -> Cadena .

    AS              shift and go to state 34
    Cadena          reduce using rule 13 (TABLAS -> Cadena .)
    INNER           reduce using rule 13 (TABLAS -> Cadena .)
    LEFT            reduce using rule 13 (TABLAS -> Cadena .)
    WHERE           reduce using rule 13 (TABLAS -> Cadena .)
    GROUP           reduce using rule 13 (TABLAS -> Cadena .)
    ORDER           reduce using rule 13 (TABLAS -> Cadena .)
    $end            reduce using rule 13 (TABLAS -> Cadena .)
    Parentesis_Derecho reduce using rule 13 (TABLAS -> Cadena .)
    ON              reduce using rule 13 (TABLAS -> Cadena .)


state 18

    (3) _SELECT -> SELECT DISTINCT COLUMNAS .

    FROM            reduce using rule 3 (_SELECT -> SELECT DISTINCT COLUMNAS .)


state 19

    (4) _SELECT -> SELECT Fun_Res AS . Comilla Cadena Comilla

    Comilla         shift and go to state 35


state 20

    (7) COLUMNA -> Cadena Punto . Cadena
    (8) COLUMNA -> Cadena Punto . Cadena AS Comilla Cadena Comilla

    Cadena          shift and go to state 36


state 21

    (6) COLUMNAS -> COLUMNA Coma . COLUMNAS
    (5) COLUMNAS -> . COLUMNA
    (6) COLUMNAS -> . COLUMNA Coma COLUMNAS
    (7) COLUMNA -> . Cadena Punto Cadena
    (8) COLUMNA -> . Cadena Punto Cadena AS Comilla Cadena Comilla

    Cadena          shift and go to state 9

    COLUMNA                        shift and go to state 10
    COLUMNAS                       shift and go to state 37

state 22

    (22) Fun_Res -> MAX Parentesis_Izquierdo . COLUMNA Parentesis_Derecho
    (7) COLUMNA -> . Cadena Punto Cadena
    (8) COLUMNA -> . Cadena Punto Cadena AS Comilla Cadena Comilla

    Cadena          shift and go to state 9

    COLUMNA                        shift and go to state 38

state 23

    (23) Fun_Res -> MIN Parentesis_Izquierdo . COLUMNA Parentesis_Derecho
    (7) COLUMNA -> . Cadena Punto Cadena
    (8) COLUMNA -> . Cadena Punto Cadena AS Comilla Cadena Comilla

    Cadena          shift and go to state 9

    COLUMNA                        shift and go to state 39

state 24

    (24) Fun_Res -> COUNT Parentesis_Izquierdo . COLUMNA Parentesis_Derecho
    (25) Fun_Res -> COUNT Parentesis_Izquierdo . DISTINCT COLUMNA Parentesis_Derecho
    (7) COLUMNA -> . Cadena Punto Cadena
    (8) COLUMNA -> . Cadena Punto Cadena AS Comilla Cadena Comilla

    DISTINCT        shift and go to state 41
    Cadena          shift and go to state 9

    COLUMNA                        shift and go to state 40

state 25

    (1) S -> _SELECT _FROM _WHERE GROUP_BY . ORDER_BY
    (37) ORDER_BY -> . ORDER BY Cadena DESC
    (38) ORDER_BY -> . ORDER BY Cadena ASC
    (39) ORDER_BY -> . ORDER BY Cadena
    (40) ORDER_BY -> .

    ORDER           shift and go to state 43
    $end            reduce using rule 40 (ORDER_BY -> .)
    Parentesis_Derecho reduce using rule 40 (ORDER_BY -> .)

    ORDER_BY                       shift and go to state 42

state 26

    (32) GROUP_BY -> GROUP . BY COLUMNAS
    (33) GROUP_BY -> GROUP . BY COLUMNAS _HAVING

    BY              shift and go to state 44


state 27

    (16) _WHERE -> WHERE CONDICION .
    (17) _WHERE -> WHERE CONDICION . _IN
    (18) _WHERE -> WHERE CONDICION . NOT_IN
    (20) _IN -> . IN Parentesis_Izquierdo S Parentesis_Derecho
    (21) NOT_IN -> . NOT IN Parentesis_Izquierdo S Parentesis_Derecho

    GROUP           reduce using rule 16 (_WHERE -> WHERE CONDICION .)
    ORDER           reduce using rule 16 (_WHERE -> WHERE CONDICION .)
    $end            reduce using rule 16 (_WHERE -> WHERE CONDICION .)
    Parentesis_Derecho reduce using rule 16 (_WHERE -> WHERE CONDICION .)
    IN              shift and go to state 47
    NOT             shift and go to state 48

    _IN                            shift and go to state 45
    NOT_IN                         shift and go to state 46

state 28

    (41) CONDICION -> COLUMNA . SIGNO ALGO
    (42) CONDICION -> COLUMNA . SIGNO COLUMNA
    (43) CONDICION -> COLUMNA . SIGNO ALGO AND CONDICION
    (44) CONDICION -> COLUMNA . SIGNO COLUMNA AND CONDICION
    (45) CONDICION -> COLUMNA . SIGNO ALGO OR CONDICION
    (46) CONDICION -> COLUMNA . SIGNO COLUMNA OR CONDICION
    (26) SIGNO -> . Igual
    (27) SIGNO -> . Desigual
    (28) SIGNO -> . Mayor
    (29) SIGNO -> . Menor
    (30) SIGNO -> . Mayor_Igual
    (31) SIGNO -> . Menor_Igual

    Igual           shift and go to state 50
    Desigual        shift and go to state 51
    Mayor           shift and go to state 52
    Menor           shift and go to state 53
    Mayor_Igual     shift and go to state 54
    Menor_Igual     shift and go to state 55

    SIGNO                          shift and go to state 49

state 29

    (10) _FROM -> FROM TABLAS INNER_JOIN .

    WHERE           reduce using rule 10 (_FROM -> FROM TABLAS INNER_JOIN .)
    GROUP           reduce using rule 10 (_FROM -> FROM TABLAS INNER_JOIN .)
    ORDER           reduce using rule 10 (_FROM -> FROM TABLAS INNER_JOIN .)
    $end            reduce using rule 10 (_FROM -> FROM TABLAS INNER_JOIN .)
    Parentesis_Derecho reduce using rule 10 (_FROM -> FROM TABLAS INNER_JOIN .)


state 30

    (11) _FROM -> FROM TABLAS LEFT_JOIN .

    WHERE           reduce using rule 11 (_FROM -> FROM TABLAS LEFT_JOIN .)
    GROUP           reduce using rule 11 (_FROM -> FROM TABLAS LEFT_JOIN .)
    ORDER           reduce using rule 11 (_FROM -> FROM TABLAS LEFT_JOIN .)
    $end            reduce using rule 11 (_FROM -> FROM TABLAS LEFT_JOIN .)
    Parentesis_Derecho reduce using rule 11 (_FROM -> FROM TABLAS LEFT_JOIN .)


state 31

    (14) TABLAS -> TABLAS Cadena . AS Cadena
    (15) TABLAS -> TABLAS Cadena .

    AS              shift and go to state 56
    Cadena          reduce using rule 15 (TABLAS -> TABLAS Cadena .)
    INNER           reduce using rule 15 (TABLAS -> TABLAS Cadena .)
    LEFT            reduce using rule 15 (TABLAS -> TABLAS Cadena .)
    WHERE           reduce using rule 15 (TABLAS -> TABLAS Cadena .)
    GROUP           reduce using rule 15 (TABLAS -> TABLAS Cadena .)
    ORDER           reduce using rule 15 (TABLAS -> TABLAS Cadena .)
    $end            reduce using rule 15 (TABLAS -> TABLAS Cadena .)
    Parentesis_Derecho reduce using rule 15 (TABLAS -> TABLAS Cadena .)
    ON              reduce using rule 15 (TABLAS -> TABLAS Cadena .)


state 32

    (49) INNER_JOIN -> INNER . JOIN TABLAS ON CONDICION
    (50) INNER_JOIN -> INNER . JOIN TABLAS ON CONDICION INNER JOIN
    (51) INNER_JOIN -> INNER . JOIN TABLAS ON CONDICION WHERE

    JOIN            shift and go to state 57


state 33

    (52) LEFT_JOIN -> LEFT . JOIN TABLAS ON CONDICION
    (53) LEFT_JOIN -> LEFT . JOIN TABLAS ON CONDICION LEFT JOIN
    (54) LEFT_JOIN -> LEFT . JOIN TABLAS ON CONDICION WHERE

    JOIN            shift and go to state 58


state 34

    (12) TABLAS -> Cadena AS . Cadena

    Cadena          shift and go to state 59


state 35

    (4) _SELECT -> SELECT Fun_Res AS Comilla . Cadena Comilla

    Cadena          shift and go to state 60


state 36

    (7) COLUMNA -> Cadena Punto Cadena .
    (8) COLUMNA -> Cadena Punto Cadena . AS Comilla Cadena Comilla

    Coma            reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    FROM            reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    Igual           reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    Desigual        reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    Mayor           reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    Menor           reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    Mayor_Igual     reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    Menor_Igual     reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    HAVING          reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    ORDER           reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    $end            reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    Parentesis_Derecho reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    AND             reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    OR              reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    IN              reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    NOT             reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    GROUP           reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    INNER           reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    WHERE           reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    LEFT            reduce using rule 7 (COLUMNA -> Cadena Punto Cadena .)
    AS              shift and go to state 61


state 37

    (6) COLUMNAS -> COLUMNA Coma COLUMNAS .

    FROM            reduce using rule 6 (COLUMNAS -> COLUMNA Coma COLUMNAS .)
    HAVING          reduce using rule 6 (COLUMNAS -> COLUMNA Coma COLUMNAS .)
    ORDER           reduce using rule 6 (COLUMNAS -> COLUMNA Coma COLUMNAS .)
    $end            reduce using rule 6 (COLUMNAS -> COLUMNA Coma COLUMNAS .)
    Parentesis_Derecho reduce using rule 6 (COLUMNAS -> COLUMNA Coma COLUMNAS .)


state 38

    (22) Fun_Res -> MAX Parentesis_Izquierdo COLUMNA . Parentesis_Derecho

    Parentesis_Derecho shift and go to state 62


state 39

    (23) Fun_Res -> MIN Parentesis_Izquierdo COLUMNA . Parentesis_Derecho

    Parentesis_Derecho shift and go to state 63


state 40

    (24) Fun_Res -> COUNT Parentesis_Izquierdo COLUMNA . Parentesis_Derecho

    Parentesis_Derecho shift and go to state 64


state 41

    (25) Fun_Res -> COUNT Parentesis_Izquierdo DISTINCT . COLUMNA Parentesis_Derecho
    (7) COLUMNA -> . Cadena Punto Cadena
    (8) COLUMNA -> . Cadena Punto Cadena AS Comilla Cadena Comilla

    Cadena          shift and go to state 9

    COLUMNA                        shift and go to state 65

state 42

    (1) S -> _SELECT _FROM _WHERE GROUP_BY ORDER_BY .

    $end            reduce using rule 1 (S -> _SELECT _FROM _WHERE GROUP_BY ORDER_BY .)
    Parentesis_Derecho reduce using rule 1 (S -> _SELECT _FROM _WHERE GROUP_BY ORDER_BY .)


state 43

    (37) ORDER_BY -> ORDER . BY Cadena DESC
    (38) ORDER_BY -> ORDER . BY Cadena ASC
    (39) ORDER_BY -> ORDER . BY Cadena

    BY              shift and go to state 66


state 44

    (32) GROUP_BY -> GROUP BY . COLUMNAS
    (33) GROUP_BY -> GROUP BY . COLUMNAS _HAVING
    (5) COLUMNAS -> . COLUMNA
    (6) COLUMNAS -> . COLUMNA Coma COLUMNAS
    (7) COLUMNA -> . Cadena Punto Cadena
    (8) COLUMNA -> . Cadena Punto Cadena AS Comilla Cadena Comilla

    Cadena          shift and go to state 9

    COLUMNAS                       shift and go to state 67
    COLUMNA                        shift and go to state 10

state 45

    (17) _WHERE -> WHERE CONDICION _IN .

    GROUP           reduce using rule 17 (_WHERE -> WHERE CONDICION _IN .)
    ORDER           reduce using rule 17 (_WHERE -> WHERE CONDICION _IN .)
    $end            reduce using rule 17 (_WHERE -> WHERE CONDICION _IN .)
    Parentesis_Derecho reduce using rule 17 (_WHERE -> WHERE CONDICION _IN .)


state 46

    (18) _WHERE -> WHERE CONDICION NOT_IN .

    GROUP           reduce using rule 18 (_WHERE -> WHERE CONDICION NOT_IN .)
    ORDER           reduce using rule 18 (_WHERE -> WHERE CONDICION NOT_IN .)
    $end            reduce using rule 18 (_WHERE -> WHERE CONDICION NOT_IN .)
    Parentesis_Derecho reduce using rule 18 (_WHERE -> WHERE CONDICION NOT_IN .)


state 47

    (20) _IN -> IN . Parentesis_Izquierdo S Parentesis_Derecho

    Parentesis_Izquierdo shift and go to state 68


state 48

    (21) NOT_IN -> NOT . IN Parentesis_Izquierdo S Parentesis_Derecho

    IN              shift and go to state 69


state 49

    (41) CONDICION -> COLUMNA SIGNO . ALGO
    (42) CONDICION -> COLUMNA SIGNO . COLUMNA
    (43) CONDICION -> COLUMNA SIGNO . ALGO AND CONDICION
    (44) CONDICION -> COLUMNA SIGNO . COLUMNA AND CONDICION
    (45) CONDICION -> COLUMNA SIGNO . ALGO OR CONDICION
    (46) CONDICION -> COLUMNA SIGNO . COLUMNA OR CONDICION
    (47) ALGO -> . numero
    (48) ALGO -> . Comilla Cadena Comilla
    (7) COLUMNA -> . Cadena Punto Cadena
    (8) COLUMNA -> . Cadena Punto Cadena AS Comilla Cadena Comilla

    numero          shift and go to state 72
    Comilla         shift and go to state 73
    Cadena          shift and go to state 9

    COLUMNA                        shift and go to state 70
    ALGO                           shift and go to state 71

state 50

    (26) SIGNO -> Igual .

    numero          reduce using rule 26 (SIGNO -> Igual .)
    Comilla         reduce using rule 26 (SIGNO -> Igual .)
    Cadena          reduce using rule 26 (SIGNO -> Igual .)


state 51

    (27) SIGNO -> Desigual .

    numero          reduce using rule 27 (SIGNO -> Desigual .)
    Comilla         reduce using rule 27 (SIGNO -> Desigual .)
    Cadena          reduce using rule 27 (SIGNO -> Desigual .)


state 52

    (28) SIGNO -> Mayor .

    numero          reduce using rule 28 (SIGNO -> Mayor .)
    Comilla         reduce using rule 28 (SIGNO -> Mayor .)
    Cadena          reduce using rule 28 (SIGNO -> Mayor .)


state 53

    (29) SIGNO -> Menor .

    numero          reduce using rule 29 (SIGNO -> Menor .)
    Comilla         reduce using rule 29 (SIGNO -> Menor .)
    Cadena          reduce using rule 29 (SIGNO -> Menor .)


state 54

    (30) SIGNO -> Mayor_Igual .

    numero          reduce using rule 30 (SIGNO -> Mayor_Igual .)
    Comilla         reduce using rule 30 (SIGNO -> Mayor_Igual .)
    Cadena          reduce using rule 30 (SIGNO -> Mayor_Igual .)


state 55

    (31) SIGNO -> Menor_Igual .

    numero          reduce using rule 31 (SIGNO -> Menor_Igual .)
    Comilla         reduce using rule 31 (SIGNO -> Menor_Igual .)
    Cadena          reduce using rule 31 (SIGNO -> Menor_Igual .)


state 56

    (14) TABLAS -> TABLAS Cadena AS . Cadena

    Cadena          shift and go to state 74


state 57

    (49) INNER_JOIN -> INNER JOIN . TABLAS ON CONDICION
    (50) INNER_JOIN -> INNER JOIN . TABLAS ON CONDICION INNER JOIN
    (51) INNER_JOIN -> INNER JOIN . TABLAS ON CONDICION WHERE
    (12) TABLAS -> . Cadena AS Cadena
    (13) TABLAS -> . Cadena
    (14) TABLAS -> . TABLAS Cadena AS Cadena
    (15) TABLAS -> . TABLAS Cadena

    Cadena          shift and go to state 17

    TABLAS                         shift and go to state 75

state 58

    (52) LEFT_JOIN -> LEFT JOIN . TABLAS ON CONDICION
    (53) LEFT_JOIN -> LEFT JOIN . TABLAS ON CONDICION LEFT JOIN
    (54) LEFT_JOIN -> LEFT JOIN . TABLAS ON CONDICION WHERE
    (12) TABLAS -> . Cadena AS Cadena
    (13) TABLAS -> . Cadena
    (14) TABLAS -> . TABLAS Cadena AS Cadena
    (15) TABLAS -> . TABLAS Cadena

    Cadena          shift and go to state 17

    TABLAS                         shift and go to state 76

state 59

    (12) TABLAS -> Cadena AS Cadena .

    Cadena          reduce using rule 12 (TABLAS -> Cadena AS Cadena .)
    INNER           reduce using rule 12 (TABLAS -> Cadena AS Cadena .)
    LEFT            reduce using rule 12 (TABLAS -> Cadena AS Cadena .)
    WHERE           reduce using rule 12 (TABLAS -> Cadena AS Cadena .)
    GROUP           reduce using rule 12 (TABLAS -> Cadena AS Cadena .)
    ORDER           reduce using rule 12 (TABLAS -> Cadena AS Cadena .)
    $end            reduce using rule 12 (TABLAS -> Cadena AS Cadena .)
    Parentesis_Derecho reduce using rule 12 (TABLAS -> Cadena AS Cadena .)
    ON              reduce using rule 12 (TABLAS -> Cadena AS Cadena .)


state 60

    (4) _SELECT -> SELECT Fun_Res AS Comilla Cadena . Comilla

    Comilla         shift and go to state 77


state 61

    (8) COLUMNA -> Cadena Punto Cadena AS . Comilla Cadena Comilla

    Comilla         shift and go to state 78


state 62

    (22) Fun_Res -> MAX Parentesis_Izquierdo COLUMNA Parentesis_Derecho .

    AS              reduce using rule 22 (Fun_Res -> MAX Parentesis_Izquierdo COLUMNA Parentesis_Derecho .)


state 63

    (23) Fun_Res -> MIN Parentesis_Izquierdo COLUMNA Parentesis_Derecho .

    AS              reduce using rule 23 (Fun_Res -> MIN Parentesis_Izquierdo COLUMNA Parentesis_Derecho .)


state 64

    (24) Fun_Res -> COUNT Parentesis_Izquierdo COLUMNA Parentesis_Derecho .

    AS              reduce using rule 24 (Fun_Res -> COUNT Parentesis_Izquierdo COLUMNA Parentesis_Derecho .)


state 65

    (25) Fun_Res -> COUNT Parentesis_Izquierdo DISTINCT COLUMNA . Parentesis_Derecho

    Parentesis_Derecho shift and go to state 79


state 66
